further building out structure and components

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Little Lemon website"
-    />
-    <meta name="og:title" content="Little Lemon Restaurant"/>
-    <meta name="og:description" content="Fine dining, great service"/>
-    <meta name="og:image" content="https://unsplash.com/photos/dish-on-white-ceramic-plate-N_Y88TWmGwA"/>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700;800&family=Markazi+Text:wght@400;500&display=swap"
+    rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Little Lemon website" />
+  <meta name="og:title" content="Little Lemon Restaurant" />
+  <meta name="og:description" content="Fine dining, great service" />
+  <meta name="og:image" content="https://unsplash.com/photos/dish-on-white-ceramic-plate-N_Y88TWmGwA" />
 
 
 
-    <title>Little Lemon Restaurant</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+  <title>Little Lemon Restaurant</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
